[package]
name = "errors"
version = "0.1.0"
authors = ["Chris McKenzie <chris.mckenzie@tpfs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.40"
err-derive = "0.2.1"
derive_more = "0.99.2"
failure = "0.1.6"
objekt = "0.1.2"
snafu = "0.6.0"
thiserror="1.0.8"